pysollya/csollya.pxd


    # Conversion from constants
    sollya_obj_t sollya_lib_string(char*)
    sollya_obj_t sollya_lib_range_from_interval(mpfi_t)
    sollya_obj_t sollya_lib_range_from_bounds(mpfr_t, mpfr_t)
    sollya_obj_t sollya_lib_constant(mpfr_t)
    sollya_obj_t sollya_lib_constant_from_double(double)
    sollya_obj_t sollya_lib_constant_from_int(int)
    sollya_obj_t sollya_lib_constant_from_int64(int64_t)
    sollya_obj_t sollya_lib_constant_from_uint64(uint64_t)
    sollya_obj_t sollya_lib_constant_from_mpz(mpz_t)
    sollya_obj_t sollya_lib_constant_from_mpq(mpq_t)

    # Get values from objects
    int sollya_lib_get_interval_from_range(mpfi_t, sollya_obj_t)
    int sollya_lib_get_bounds_from_range(mpfr_t, mpfr_t, sollya_obj_t)
    int sollya_lib_get_string(char**, sollya_obj_t)
    int sollya_lib_get_constant_as_double(double*, sollya_obj_t)
    int sollya_lib_get_constant_as_int(int*, sollya_obj_t)
    int sollya_lib_get_constant_as_int64(int64_t*, sollya_obj_t)
    int sollya_lib_get_constant_as_uint64(uint64_t*, sollya_obj_t)
    int sollya_lib_get_constant(mpfr_t, sollya_obj_t)
    int sollya_lib_get_constant_as_uint64_array(int*, uint64_t**, size_t*, sollya_obj_t)
    int sollya_lib_get_constant_as_mpz(mpz_t, sollya_obj_t)
    int sollya_lib_get_constant_as_mpq(mpq_t, sollya_obj_t)

    # Lists
    sollya_obj_t sollya_lib_list(sollya_obj_t*, int)
    sollya_obj_t sollya_lib_end_elliptic_list(sollya_obj_t*, int)
    int sollya_lib_get_list_elements(sollya_obj_t**, int*, int*, sollya_obj_t)
    int sollya_lib_get_element_in_list(sollya_obj_t*, sollya_obj_t, int)
    sollya_obj_t sollya_lib_build_list(sollya_obj_t, ...)

    # Type checks
    int sollya_lib_obj_is_function(sollya_obj_t)
    int sollya_lib_obj_is_list(sollya_obj_t)
    int sollya_lib_obj_is_end_elliptic_list(sollya_obj_t)
    int sollya_lib_obj_is_range(sollya_obj_t)
    int sollya_lib_obj_is_string(sollya_obj_t)
    int sollya_lib_obj_is_error(sollya_obj_t)
    int sollya_lib_obj_is_structure(sollya_obj_t)
    int sollya_lib_obj_is_procedure(sollya_obj_t)
    int sollya_lib_obj_is_externalprocedure(sollya_obj_t)

    # Constant checks
    int sollya_lib_is_on(sollya_obj_t)
    int sollya_lib_is_off(sollya_obj_t)
    int sollya_lib_is_true(sollya_obj_t)
    int sollya_lib_is_false(sollya_obj_t)
    int sollya_lib_is_void(sollya_obj_t)
    int sollya_lib_is_default(sollya_obj_t)
    int sollya_lib_is_pi(sollya_obj_t)

    # Function decomposition
    int sollya_lib_get_function_arity(int*, sollya_obj_t)
    int sollya_lib_get_head_function(sollya_base_function_t*, sollya_obj_t)
    int sollya_lib_get_nth_subfunction(sollya_obj_t*, sollya_obj_t, int)

    # Structures
    int sollya_lib_get_structure_elements(char***, sollya_obj_t**, int*, sollya_obj_t)
    int sollya_lib_get_element_in_structure(sollya_obj_t*, char*, sollya_obj_t)
    int sollya_lib_create_structure(sollya_obj_t*, sollya_obj_t, char*, sollya_obj_t)

    # Evaluation
    sollya_fp_result_t sollya_lib_evaluate_function_at_point(mpfr_t, sollya_obj_t, mpfr_t, mpfr_t*)
    int sollya_lib_evaluate_function_over_interval(mpfi_t, sollya_obj_t, mpfi_t)

    # Build function constructors
    sollya_obj_t sollya_lib_build_function_free_variable()
    sollya_obj_t sollya_lib_build_function_add(sollya_obj_t, sollya_obj_t)
    sollya_obj_t sollya_lib_build_function_sub(sollya_obj_t, sollya_obj_t)
    sollya_obj_t sollya_lib_build_function_mul(sollya_obj_t, sollya_obj_t)
    sollya_obj_t sollya_lib_build_function_div(sollya_obj_t, sollya_obj_t)
    sollya_obj_t sollya_lib_build_function_sqrt(sollya_obj_t)
    sollya_obj_t sollya_lib_build_function_exp(sollya_obj_t)
    sollya_obj_t sollya_lib_build_function_log(sollya_obj_t)
    sollya_obj_t sollya_lib_build_function_log2(sollya_obj_t)
    sollya_obj_t sollya_lib_build_function_log10(sollya_obj_t)
    sollya_obj_t sollya_lib_build_function_sin(sollya_obj_t)
    sollya_obj_t sollya_lib_build_function_cos(sollya_obj_t)
    sollya_obj_t sollya_lib_build_function_tan(sollya_obj_t)
    sollya_obj_t sollya_lib_build_function_asin(sollya_obj_t)
    sollya_obj_t sollya_lib_build_function_acos(sollya_obj_t)
    sollya_obj_t sollya_lib_build_function_atan(sollya_obj_t)
    sollya_obj_t sollya_lib_build_function_pow(sollya_obj_t, sollya_obj_t)
    sollya_obj_t sollya_lib_build_function_neg(sollya_obj_t)
    sollya_obj_t sollya_lib_build_function_abs(sollya_obj_t)
